Bug #35412 Typo in sql/sql_parse.cc and sql/partition_info.cc
Submitted: 18 Mar 2008 17:21 Modified: 18 Dec 2008 16:38
Reporter: Hakan Küçükyılmaz Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S3 (Non-critical)
Version:6.0.5 OS:Any
Assigned to: Hakan Küçükyılmaz CPU Architecture:Any

[18 Mar 2008 17:21] Hakan Küçükyılmaz
Description:
The files sql/sql_parse.cc and sql/partition_info.cc have following typo:

my_error(ER_WRONG_ARGUMENTS,MYF(0),"DATA DIRECORY");

How to repeat:
Look into sql/sql_parse.cc and sql/partition_info.cc.

Suggested fix:
Make it read:
my_error(ER_WRONG_ARGUMENTS,MYF(0),"DATA DIRECTORY");
[18 Mar 2008 21:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/44208

ChangeSet@1.2598, 2008-03-18 22:41:00+01:00, hakank@lu0011.(none) +4 -0
  Fix for Bug #35412 Typo in sql/sql_parse.cc and sql/partition_info.cc.
[10 Apr 2008 19:14] Bugs System
Pushed into 6.0.5-alpha
[18 Dec 2008 16:38] Paul DuBois
Cosmetic change. No changelog entry needed.