Fix for Bug #35412 Typo in sql/sql_parse.cc and sql/partition_info.cc.